mesgen-11: writed admin auth and restore password
